--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,12 @@
-APP_NAME=Laravel
+APP_NAME=D&N_Tour_Travel
+APP_BRAND="D & N Tour Travel"
+APP_SLOGAN="D & N Tour Travel | Travel Bandung - Bandara(Soetta)"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:Qpq817/CqKZmvDHarWGLRVME6fauYbifK3b/zY5BbB8=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
+API_URL=http://localhost:8000/api/v1
+FRONTEND_APP=
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,7 +15,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=store_dntour
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -28,13 +32,13 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_DRIVER=smtp
+MAIL_HOST=
+MAIL_PORT=587
+MAIL_USERNAME=
+MAIL_PASSWORD=
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_FROM_ADDRESS=
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
@@ -50,3 +54,14 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+MIX_APP_ENV="${APP_ENV}"
+MIX_API_URL="${API_URL}"
+MIX_SERVER_URL="${APP_URL}"
+MIX_APP_NAME="${APP_NAME}"
+
+DNTOUR_GEO_API=
+DNTOUR_NEW_GEO_API=
+DNTOUR_GEO_KEY=
+DNTOUR_API_TOKEN=
+DNTOUR_XRAPID_KEY=
+DNTOUR_XRAPID_HOST=
