--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ APP_DEBUG=true
 APP_URL=http://localhost:8000
 API_URL=http://localhost:8000/api/v1
 FRONTEND_APP=
+FRONTEND_APP_TEST=
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -51,6 +52,14 @@ PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=mt1
+
+API_KEY_BIG_DATA=
+API_KEY_IP_FIND=
+API_KEY_IP_API=
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT=
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
